--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.3.5",
     "@angular/router": "^17.3.5",
     "@doist/todoist-api-typescript": "^2.1.2",
+    "angular-in-memory-web-api": "^0.17.0",
     "css-reset-and-normalize": "^2.3.6",
     "node-fetch": "^3.3.1",
     "react-facebook-login": "^4.1.1",
